# r1carcare

./: .gitignore  README.md
backend/: .env  README.md  automated_sender.session  example.py  main.py  pyproject.toml  r1carcare.db
backend/api/: bookings.py  customers.py  health.py  holidays.py  staff.py  stamp_cards.py  users.py
backend/db/: sessions.py
backend/db/models/: pydantic_models.py  sqlalchemy_models.py
backend/services/: bookings_service.py  customers_service.py  holidays_service.py  oauth.py  staff_service.py  stamp_cards_service.py  telegram_service.py  users_services.py
backend/utils/: db_utils.py  exceptions.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BookingEditModal.jsx  Layout.jsx
frontend/src/css/: BookNow.css  Dashboard.css  Home.css  Layout.css  Login.css  StampCards.css
frontend/src/pages/: AddBooking.jsx  BookNow.jsx  Customer.jsx  Dashboard.jsx  Holidays.jsx  Home.jsx  Login.jsx  OlderBookings.jsx  Packages.jsx  Staff.jsx  StampCards.jsx  TodaysBookings.jsx  UpcomingBookings.jsx
frontend/src/utils/: APIrequest.js  inputAssist.js
